<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    app:cardCornerRadius="15dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cardInfoLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/colorButtonNormal"
        android:foreground="?android:attr/selectableItemBackground"
        android:fadeScrollbars="false"
        android:clickable="true"
        android:focusable="true">

        <TextView
            android:id="@+id/textStoreName"
            android:text="@string/storeName_default"
            android:textSize="30sp"
            android:textStyle="bold"
            android:padding="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/maskInfoLayout"
            app:layout_constraintLeft_toLeftOf="@id/cardInfoLayout"
            app:layout_constraintRight_toRightOf="@id/cardInfoLayout"
            app:layout_constraintTop_toTopOf="@id/cardInfoLayout" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@id/maskInfoLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textStoreName"
            app:layout_constraintBottom_toBottomOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/adultLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:background="@drawable/card_info_background"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/childLayout"
                app:layout_constraintTop_toTopOf="@+id/maskInfoLayout"
                app:layout_constraintBottom_toBottomOf="parent">

                <TextView
                    android:id="@+id/textAdultMask"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/adultMask_default"
                    android:textSize="20sp"
                    android:textStyle="bold"

                    app:layout_constraintBottom_toTopOf="@+id/textAdultMaskQuantity"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textAdultMaskQuantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/maskQuantity_default"
                    android:textSize="16sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textAdultMask"
                    app:layout_constraintBottom_toBottomOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/childLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:background="@drawable/card_info_background"
                app:layout_constraintLeft_toRightOf="@+id/adultLayout"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@+id/maskInfoLayout"
                app:layout_constraintBottom_toBottomOf="parent">

                <TextView
                    android:id="@+id/textChildMask"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/childMask_default"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@+id/textChildQuantity"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textChildMaskQuantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/maskQuantity_default"
                    android:textSize="16sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textChildMask" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>